tests/fixtures/invalid/duplicate_global_variable.c
int total = 1;
int total = 2;

int main() {
    return total;
}
